# SpeechTools

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  config.py  pyproject.toml  requirements.txt  sandbox.py
speech_transcription/: emo2vec.py  processor.py  speech2emo.py  timestamp.py
whisper_diarization/: diarize.py
whisper_diarization/diarization/msdd/: msdd.py
whisper_diarization/diarization/sortformer/: sortformer.py
